--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,20 @@
+on:
+  push:
+    branches:
+      -master
 
+
+
+
+
+
+jops:
+  build:
+    run-on: ubuntu-latest
+
+    steps:
+      - name: 'testing github action'
+        run: pwd
+
+      -name: 'testing printing'
+        run: echo Mohamed
