printing folder contents

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,7 @@ jops:
 
       -name: 'testing printing'
         run: echo Mohamed
+
+      - name: 'printing folder contennts'
+         run: ls
+         
