printing folder contents

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'testing github action'
+      - name: 'Testing Github action'
         run: pwd
 
-      -name: 'testing printing'
+      -name: 'Testing Printing'
         run: echo Mohamed
 
-      - name: 'printing folder contennts'
+      - name: 'Printing folder contennts'
          run: ls
 
