--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,9 @@ jobs:
  build:
     runs-on: ubuntu-latest 
     steps:  
-      - name: 'Testing Github action'
+      - name: "Testing Github action"
         run: pwd
 
-      - name: 'Testing Printing'
+      - name: "Testing Printing"
         run: echo shams
       
